  include_collections=False gives the same result as is used when the flush
  determines whether or not to issue an UPDATE for the instance's row.

- Added "schema" argument to Sequence; use this with Postgres /Oracle when
  the sequence is located in an alternate schema.  Implements part of
  [ticket:584], should fix [ticket:761].

- Fixed reflection of the empty string for mysql enums.

- Added 'passive_deletes="all"' flag to relation(), disables all nulling-out
  of foreign key attributes during a flush where the parent object is
  deleted.

- Column defaults and onupdates, executing inline, will add parenthesis for
  subqueries and other parenthesis-requiring expressions

- The behavior of String/Unicode types regarding that they auto-convert to
  TEXT/CLOB when no length is present now occurs *only* for an exact type of
  String or Unicode with no arguments.  If you use VARCHAR or NCHAR
  (subclasses of String/Unicode) with no length, they will be interpreted by
  the dialect as VARCHAR/NCHAR; no "magic" conversion happens there.  This
  is less surprising behavior and in particular this helps Oracle keep
  string-based bind parameters as VARCHARs and not CLOBs [ticket:793].

- Fixes to ShardedSession to work with deferred columns [ticket:771].

- User-defined shard_chooser() function must accept "clause=None" argument;
  this is the ClauseElement passed to session.execute(statement) and can be
  used to determine correct shard id (since execute() doesn't take an
  instance.)

- Adjusted operator precedence of NOT to match '==' and others, so that 
  ~(x <operator> y) produces NOT (x <op> y), which is better compatible
  with older MySQL versions. [ticket:764].  This doesn't apply to "~(x==y)"
  as it does in 0.3 since ~(x==y) compiles to "x != y", but still applies
  to operators like BETWEEN.

- Other tickets: [ticket:768], [ticket:728], [ticket:779], [ticket:757]

0.4.0beta5
----------
